# Freedorm_firmware

./: .gitignore  LICENSE  README.md
IDF_Project/: .clang-format  CMakeLists.txt  device_id_gernerate.py  sdkconfig  sdkconfig.old  serial_numbers.csv
IDF_Project/components/MultiButton/: multi_button.h
IDF_Project/components/bsp_ble/: CMakeLists.txt  ble_module.c  ble_module.h  esp_hidd_prf_api.c  hid_device_le_prf.c  hidd_le_prf_int.h  kalman_filter.c
IDF_Project/components/bsp_button/: button.c  button.h
IDF_Project/components/freedorm_mqtt/: CMakeLists.txt  freedorm_mqtt.c  freedorm_mqtt.h
IDF_Project/components/lock_control/: lock_control.c  lock_control.h  lock_control.mmd
IDF_Project/components/ws2812b/: CMakeLists.txt  led_strip_encoder.c  ws2812b_led.c  ws2812b_led.h
IDF_Project/main/: CMakeLists.txt  _freedorm_main.c  _freedorm_main.h
Test/: rssi.py
ble_detect/: .gitignore  CMakeLists.txt  sdkconfig
ble_detect/main/: ble_prox_prph.h  main.c
ble_detect_hid/: CMakeLists.txt  sdkconfig.old
ble_detect_hid/components/BSP/: CMakeLists.txt  button.c
ble_detect_hid/components/MultiButton/: CMakeLists.txt  multi_button.h
ble_detect_hid/components/bsp_ble/: CMakeLists.txt  ble_module.c  ble_module.h
ble_detect_hid/components/bsp_button/: CMakeLists.txt  button.c  button.h
ble_detect_hid/components/lock_control/: CMakeLists.txt  lock_control.c  lock_control.h
ble_detect_hid/components/ws2812b/: ws2812b_led.c  ws2812b_led.h
ble_detect_hid/main/: CMakeLists.txt  _freedorm_main.c  ble_hidd_demo_main.c
ble_detect_hid/main/bsp_ble/: CMakeLists.txt
cas/: CMakeLists.txt  sdkconfig.old
cas/main/: station_example_main.c
door_kit_mini_firmware/: CMakeLists.txt
door_kit_mini_firmware/main/: CMakeLists.txt  ble_hidd.c  main.c
gpio/: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.old
gpio/main/: gpio_example_main.c
gpio_control_transistor/: CMakeLists.txt
https/: sdkconfig  sdkconfig.old
https/main/: CMakeLists.txt  cas_sustech.pem  https_request_example_main.c  server_root_cert.pem
mqtt_example/: CMakeLists.txt  sdkconfig  sdkconfig.old
mqtt_example/main/: app_main.c
mqtt_ssl/: sdkconfig  sdkconfig.old
product_design/: system_diagram.excalidraw
test_ipone_cant_find/: CMakeLists.txt
test_ipone_cant_find/main/: ble_hidd_demo_main.c
